@@ -423,6 +423,7 @@
                      "xt/author/portability.t",
                      "xt/author/test-version.t",
                      "xt/release/changes.t",
+                     "xt/release/distmeta.t",
                      "xt/release/eol.t",
                      "xt/release/kwalitee.t",
                      "xt/release/manifest.t",
@@ -787,6 +788,7 @@
                      "xt/author/portability.t",
                      "xt/author/test-version.t",
                      "xt/release/changes.t",
+                     "xt/release/distmeta.t",
                      "xt/release/eol.t",
                      "xt/release/kwalitee.t",
                      "xt/release/manifest.t",
