@@ -333,6 +333,7 @@ x_Dist_Zilla:
             - xt/author/portability.t
             - xt/author/test-version.t
             - xt/release/changes.t
+            - xt/release/distmeta.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
@@ -615,6 +616,7 @@ x_Dist_Zilla:
             - xt/author/portability.t
             - xt/author/test-version.t
             - xt/release/changes.t
+            - xt/release/distmeta.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
