@@ -1,0 +1,12 @@
+#!perl
+
+use 5.006;
+use strict;
+use warnings;
+
+# this test was generated with
+# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.018
+
+use Test::CPAN::Meta;
+
+meta_yaml_ok();
