@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added Test::CPAN::Meta release test
+
 0.018  2017-09-16 18:14:53 UTC
 
   - Also copy files from bin/ with CopyFilesFromRelease
